# putout

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
assets/: kelvin_table.txt
src/: libw.rs  main.rs
src/device/: device_state.rs  message_controller.rs  mod.rs  state.rs  window_state.rs  wstate.rs
src/dmp/: cab_nodes.json  nodes.json  routes.json  segments.json
src/dmp/hull/701/: 0data_bbx  0data_hash  1data_bbx  1data_hash  2data_bbx  2data_hash  3data_bbx  3data_hash  4data_bbx  4data_hash  5data_bbx  5data_hash  6data_bbx  6data_hash  7data_bbx  7data_hash
src/dmp/hull/nf/: 1data_bbx  1data_hash  2data_bbx  2data_hash  3data_bbx  3data_hash
src/gui/: camera_base.rs  camera_fly.rs  camera_orbit.rs  camera_touch.rs  mod.rs  slicer.rs
src/remote/: common_state.rs  hull_state.rs  mod.rs
src/scene/: gpu_mem.rs  mesh_loader.rs  mod.rs  scene_details.rs  scene_state.rs
src/shaders/: highlight_shader.wgsl  minimal_output_shader.wgsl  selection.wgsl  shader.wgsl  shader_one light.wgsl  shader_ori.wgsl  shader_ver_1.wgsl  snap.wgsl
src/shaders/fragment/: radar.frag
src/shared/: dimension.rs  highlight_pipeline.rs  materials_lib.rs  mesh_common.rs  mesh_pipeline.rs  mod.rs  primitives_pipe.rs  primitives_sphere.rs  screen_capture.rs  shared_buffers.rs  ship_consts.rs  text_layout.rs  wasm_remote.rs
