#set RUST_LOG=error;  wasm-pack build  --target web --out-dir D:\WebstormProjects\portf1\src\assets\
#npm install d:\rustproj2\putout\pkg\
#npm uninstall d:\rustproj2\sm15nodes\pkg\
#set RUST_LOG="error";  wasm-pack build --release --target web
[package]
name = "putout"
version = "0.1.0"
edition = "2021"
#[target.wasm32-unknown-unknown]
#rustflags = ["-C", "target-feature=+atomics,+bulk-memory,+mutable-globals", "-C", "link-arg=--max-memory=4294967296"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="main"
path="src/libw.rs"
crate_type=["cdylib", "rlib"]

[[bin]]
name="putout"
path="src/main.rs"

[dependencies]
once_cell = "1.21.3"
env_logger = "0.11.8"
parking_lot = "0.12.3"
itertools = "0.14.0"
truck-base = "0.5.0"
truck-polymesh = "0.6.0"
#bvh = { version = "0.8.0",features = ["serde"] }
#triangle = "0.2.0"
smaa = "0.17.0"
bitflags = "2.9.1"
log = "0.4.27"
pollster = "0.4.0"
glyphon = "0.9.0"
#HasRawWindowHandle
#https://stackoverflow.com/questions/77373416/the-trait-raw-window-handlehasrawdisplayhandle-is-not-implemented-for-windo

winit = { version = "0.30.10"}
palette = { version = "0.7.6",default-features = true,features = ["named","named_from_str","bytemuck"] }
wgpu = { version = "25.0.0", features = ["webgpu"]}
bytemuck = { version = "1.23.0", features = ["derive"] }
#array-bytes = "6.2.2"

#glam = { version = "0.25.0", features = ["bytemuck"] }
cgmath = "0.18.0"
nalgebra = "0.33.2"
miniz_oxide = "0.8.8"
phf = { version = "0.11.3",features = ["macros"] }

serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }

wasm-bindgen = { version = "0.2.100"}
web-sys = { version = "0.3.77", features = ["Document", "Window", "Element", "HtmlCanvasElement", "CssStyleDeclaration","GpuCanvasContext","GpuCanvasConfiguration"] }


[package.metadata.wasm-pack.profile.release]
wasm-opt = false
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
#wgpu = { version = "0.19.1", features = ["webgpu"]}
#wasm-bindgen = { version = "0.2.92"}
wasm-bindgen-futures = "0.4.50"

